deploy: 83256180df72addfb0c4d989241aba081cdb3c2d

--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -22,4 +22,4 @@ edouard.paris/bitcoin/index.txt | less</strong><br></div></aside><section><div c
 </time></span>|
 <a href=https://edouard.paris/articles/bitcoin-and-house-of-dragon/>Bitcoin and inheritance, a House of the Dragon story</a></li></ul><h1>2019 --</h1><ul><li><span><time>Oct 21
 </time></span>|
-<a href=https://edouard.paris/blog/tlc2019/>The Lightning Conference 2019</a></li></ul></section><aside><div class=sidenote>&copy;<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
+<a href=https://edouard.paris/blog/tlc2019/>The Lightning Conference 2019</a></li></ul></section><footer id=footer>&copy; 2024 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></footer></main></body></html>
