--- a/cv/index.html
+++ b/cv/index.html
@@ -20,4 +20,4 @@ used: QuantLib and TinyXml.</p><h1 id=-education----->[ Education ] &mdash;</h1>
 l’Entreprise</em>, National Graduate Engineering School. Coursework about
 algorithm analysis, calculus, formal proof, cybersecurity and software
 programming.</p><p><strong>Erasmus Semester in computer science, Vilniaus Universitetas</strong><br><em>2015, Vilnius LT</em></p><p><strong>Classes préparatoires aux grandes écoles, Lycée Michelet</strong><br><em>2011-2013, Paris</em></p><p>Preparatory classes: two-year undergraduate intensive course in
-mathematics and physics.</p></div></section><aside><div class=sidenote>&copy;<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
+mathematics and physics.</p></div></section><footer id=footer>&copy; 2024 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></footer></main></body></html>
