--- a/fr/index.html
+++ b/fr/index.html
@@ -9,4 +9,4 @@ edouard.paris/fr/index.txt | less</strong><br></div></aside><section><div class=
    \/__/     \/__/     \/__/               \/__/     \/__/     \|__| ,
 </code></pre><p>Je m&rsquo;appelle Édouard Paris.</p><p>Je suis ingénieur en informatique et mathématiques appliquées,
 vous pouvez me retrouver sur :</p><p>/ <a href=https://github.com/edouardparis>GitHub</a>
-/ <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p></div></section><aside><div class=sidenote>&copy;<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
+/ <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p></div></section><footer id=footer>&copy; 2024 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></footer></main></body></html>
