--- a/fr/nixos/index.html
+++ b/fr/nixos/index.html
@@ -19,4 +19,4 @@ edouard.paris/fr/nixos/index.txt | less</strong><br></div></aside><section><div 
            .::::&#39;&#39;::::.     &#39;::::.           
           .::::&#39;   ::::.     &#39;::::.          
          .::::      ::::      &#39;::::.         
-</code></pre></div></section><aside><div class=sidenote>&copy;<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
+</code></pre></div></section><footer id=footer>&copy; 2024 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></footer></main></body></html>
