--- a/notes/index.html
+++ b/notes/index.html
@@ -9,4 +9,4 @@ edouard.paris/notes/index.txt | less</strong><br></div></aside><section><div cla
 </time></span>|
 <a href=https://edouard.paris/notes/i-asked-gpt4-to-create-dobble/>I Asked GPT-4 to help me create a Dobble card deck</a></li></ul><h1>2022 --</h1><ul><li><span><time>Jan 18
 </time></span>|
-<a href=https://edouard.paris/notes/how-i-sign-lntop-binary/>How I sign a LNTOP binary</a></li></ul></section><aside><div class=sidenote>&copy;<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
+<a href=https://edouard.paris/notes/how-i-sign-lntop-binary/>How I sign a LNTOP binary</a></li></ul></section><footer id=footer>&copy; 2024 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></footer></main></body></html>
