--- a/notes/install-nixos-on-an-ovh-vps-with-nixos-anywhere/index.html
+++ b/notes/install-nixos-on-an-ovh-vps-with-nixos-anywhere/index.html
@@ -44,4 +44,4 @@ Change the <code>hardware-configuration.nix</code> file with the one you copied 
 </span></span></span><span style=display:flex><span><span style=color:#666>           .::::&#39;&#39;::::.     &#39;::::.           
 </span></span></span><span style=display:flex><span><span style=color:#666>          .::::&#39;   ::::.     &#39;::::.          
 </span></span></span><span style=display:flex><span><span style=color:#666>         .::::      ::::      &#39;::::.         
-</span></span></span></code></pre></div><p>The Nixos VPS is ready ! Modify and reload configuration as you will ! ❄️</p></div></section><aside><div class=sidenote>&copy;<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
+</span></span></span></code></pre></div><p>The Nixos VPS is ready ! Modify and reload configuration as you will ! ❄️</p></div></section><footer id=footer>&copy; 2024 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></footer></main></body></html>
