--- a/talks/index.html
+++ b/talks/index.html
@@ -6,4 +6,4 @@ edouard.paris/talks/index.txt | less</strong><br></div></aside><section><div cla
 <a href=/slides/2019-06-18-meetup-go-paris>slides</a> /
 <a href=https://www.meetup.com/fr-FR/Golang-Paris/events/262210434/>link</a></p><h2 id=loukoum-an-sql-builder-for-go-fr>Loukoum, an SQL Builder for Go (FR)</h2><p>2019-02-21, for the meetup Postgres Paris -
 <a href=https://github.com/novln/loukoum-pgmeetup>slides</a> /
-<a href=https://www.meetup.com/fr-FR/PostgreSQL-User-Group-Paris/events/258592000/>link</a></p></div></section><aside><div class=sidenote>&copy;<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
+<a href=https://www.meetup.com/fr-FR/PostgreSQL-User-Group-Paris/events/258592000/>link</a></p></div></section><footer id=footer>&copy; 2024 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></footer></main></body></html>
