--- a/nixos/index.html
+++ b/nixos/index.html
@@ -21,4 +21,4 @@ edouard.paris/nixos/index.txt | less</strong><br></div></aside><section><div cla
          .::::      ::::      &#39;::::.         
 </code></pre></div><h1>2024 --</h1><ul><li><span><time>Jan 15
 </time></span>|
-<a href=https://edouard.paris/notes/install-nixos-on-an-ovh-vps-with-nixos-anywhere/>Install NixOs on an OVH vps with nixos-anywhere</a></li></ul></section><aside><div class=sidenote>&copy;<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
+<a href=https://edouard.paris/notes/install-nixos-on-an-ovh-vps-with-nixos-anywhere/>Install NixOs on an OVH vps with nixos-anywhere</a></li></ul></section><footer id=footer>&copy; 2024 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></footer></main></body></html>
